# BGRAToYUY2Demo

./: CMakeLists.txt
shaders/: BGRAToYUY2.hlsl  NV12ToRGBA.hlsl
src/: BGRAToYUY2Converter.cpp  BGRAToYUY2Converter.h  DXGICapture.cpp  DXGICapture.h  NV12ToRGBAConverter.cpp  NV12ToRGBAConverter.h  Utils.h  main.cpp
